# workshop_telegram_bot

./: .env.example  .gitignore  add_pictures.py  docker-compose.yaml  launcher.py  pyproject.toml
app/internal/repository/: sqliet_repository.py
app/internal/repository/sqlite/: pictures.py  users.py
app/internal/services/: meme.py
app/internal/workers/: add_picture.py  add_picture_worker.py  mail.py  picture.py  update_picture_status.py
app/pkg/connectors/sqlite/: connector.py
app/pkg/models/: __init__.py  picture.py  users.py
docker/api/: Dockerfile
